[package]
name = "dotty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.51", features = ["cargo", "derive", "env"] }
env_logger = "0.11.8"
gethostname = "1.1.0"
git2 = "0.20.2"
inquire = { version = "0.9.1", features = ["editor"] }
log = "0.4.28"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
walkdir = "2.5.0"
